[package]
name = "nimbus-consensus"
description = "Client-side worker for the Nimbus family of slot-based consensus algorithms"
version = "0.1.0"
edition = "2018"

[dependencies]
# Substrate deps
sp-consensus = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-inherents = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-blockchain = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-block-builder = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-api = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-client-api = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-consensus = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
axlib-prometheus-endpoint = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-keystore = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-application-crypto = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

# Polkadot dependencies
polkadot-client = { git = "https://github.com/axia-tech/polkadot", branch = "dev", default-features = false }

# Cumulus dependencies
cumulus-client-consensus-common = { git = "https://github.com/axia-tech/cumulus", branch = "dev" }
cumulus-primitives-core = { git = "https://github.com/axia-tech/cumulus", branch = "dev" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/axia-tech/cumulus", branch = "dev" }

# Nimbus Dependencies
nimbus-primitives = { path = "../nimbus-primitives" }

# Other deps
futures = { version = "0.3.8", features = ["compat"] }
codec = { package = "parity-scale-codec", version = "2.0.0", features = [ "derive" ] }
tracing = "0.1.22"
async-trait = "0.1.42"
parking_lot = "0.9"
log = "0.4"
