[package]
authors = ["Axia-Tech"]
edition = "2018"
name = "pallet-aura-style-filter"
version = "0.1.0"

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
frame-support = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
frame-system = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
nimbus-primitives = { path = "../../nimbus-primitives", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "serde",
    "parity-scale-codec/std",
    "frame-support/std",
    "frame-system/std",
    "nimbus-primitives/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "scale-info/std",
]
